--- a/P1/style.css
+++ b/P1/style.css
@@ -53,6 +53,7 @@ html {
     height: 200px;
     margin-left:auto ;
     margin-right: auto;
+    margin-bottom: -30px;
 }
 
 .page {
@@ -67,6 +68,8 @@ html {
     /* transform: translateY(-50%); */
 }
 .card-body{
+    margin-top:auto;
+    margin-bottom: auto;
     margin-left:auto ;
     margin-right: auto;
     align-items: center;
