--- a/P1/style.css
+++ b/P1/style.css
@@ -86,3 +86,27 @@ html {
 #profile{
     margin-top: 110px;
 }
+
+.card-img-top {
+    margin: 0;
+    width: 100%;
+}
+
+.card {
+    position: relative;
+    margin: 1em;
+    max-width: 250px;
+}
+
+.card-body {
+    margin: 0;
+    text-align: left;
+}
+
+.card-body p {
+    margin-bottom: 0.25em;
+}
+
+main {
+    padding: 1.5em;
+}
