--- a/P1/style.css
+++ b/P1/style.css
@@ -134,10 +134,21 @@ main {
 .log-stuff{
     margin-left: auto;
     margin-right: auto;
+    max-width:600px;
 }
 .logs{
     margin: auto;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+.sign-up-image{
+    width: 200px !important;
+    height: 200px !important;
+    margin-left:auto ;
+    margin-right: auto;
+    margin: auto;
+    margin-bottom: -50px !important;
 }
