--- a/P1/style.css
+++ b/P1/style.css
@@ -76,16 +76,13 @@ html {
     text-align: center;
 }
 
-#me{
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    max-width: 100%;
-}
+
 
 #profile{
-    margin-top: 110px;
+    margin-top: 30px;
 }
+
+
 
 .card-img-top {
     margin: 0;
@@ -151,8 +148,45 @@ main {
     margin-right: auto;
     margin: auto;
     margin-bottom: -50px !important;
+    margin-top: -50px !important;
 }
 
 .modal-title, .modal-body{
     text-align: left;
+}
+
+
+#main_profile_info{
+    /* text-align: left; */
+    /* display: flex;
+    padding-bottom: 100px; */
+}
+
+#me{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    max-width: 100%;
+    margin-right:2em;
+    margin-top: 4em;
+    /* text-align: left; */
+}
+
+/* #profile-title{
+    align-self: flex-end;
+} */
+
+.text-container {
+    display: block;
+    align-items: center;
+}
+
+.profile {
+    display: flex;
+    margin-left: 10em;
+    
+}
+
+#about-profile{
+    margin-top: 20px !important;
 }
