--- a/P1/style.css
+++ b/P1/style.css
@@ -190,3 +190,129 @@ main {
 #about-profile{
     margin-top: 20px !important;
 }
+
+/* ============ RESERVATIONS CSS ~ Devan ============ */
+
+#v-bar {
+    margin-left: 1rem;
+    visibility: visible;
+}
+
+.property-mgr-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+#property-info-wrapper {
+    padding-left: 1rem;
+    text-align: left;
+    width: 100%;
+}
+
+#property-info-wrapper form, hr, .list-group {
+    max-width: 800px;
+}
+
+#property-info-wrapper .list-group p {
+    font-size: x-small;
+    margin: 0;
+    height: 10px;
+}
+
+#requests-manager .list-group .btn-group {
+    column-gap: 2px;
+}
+
+#requests-manager .list-group span {
+    margin-left: 12px;
+}
+
+#sidebar-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+#collapse-sidebar {
+    max-width: 250px;
+    width: 250px;
+    height: fit-content;
+    overflow: hidden;
+    transition: all 0.5s ease;
+}
+
+#full-collapse-list {
+    width: 100%;
+    height: fit-content;
+    transition: all 0.5s ease;
+    overflow: hidden;
+    padding-top: 5px;
+}
+
+#properties-mgr-title {
+    text-align: center;
+    align-self: center;
+    padding: 0px 0px 0px 5px;
+}
+
+#collapse-sidebar a {
+    text-align: center;
+    border-radius: 0;
+}
+
+.form-small-grid {
+    width: 300px;
+}
+
+.form-small-grid-item {
+    width: 50%;
+}
+
+.short-input {
+    width: 75px;
+}
+
+.submit-btn {
+    margin-top: 4px;
+}
+
+@media only screen and (max-width: 450px) {
+    #property-info-wrapper .list-group li .request-card-info {
+        height: 75px;
+    }
+
+    #property-info-wrapper .list-group li .request-card-info span {
+        font-size: x-small;
+    }
+
+    #property-info-wrapper .list-group li .btn-group {
+        margin-bottom: 46px;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    #collapse-sidebar {
+        max-width: 100%;
+        width: 100%;
+        height: 100%;
+    }
+
+    #v-bar {
+        visibility: hidden;
+    }
+
+    #full-collapse-list {
+        width: 100%;
+        height: 100%;
+    }
+
+    .property-mgr-wrapper {
+        flex-direction: column;
+    }
+
+    #property-info-wrapper {
+        padding-left: 0;
+    }
+}
+
+/* ============ RESERVATIONS CSS ~ Devan ============ */
