--- a/P1/style.css
+++ b/P1/style.css
@@ -156,12 +156,6 @@ main {
 }
 
 
-#main_profile_info{
-    /* text-align: left; */
-    /* display: flex;
-    padding-bottom: 100px; */
-}
-
 #me{
     border-radius: 50%;
     width: 200px;
@@ -179,16 +173,34 @@ main {
 .text-container {
     display: block;
     align-items: center;
+    margin-top:5rem;
 }
 
+/* NOT RESPOSIVE YET */
 .profile {
     display: flex;
-    margin-left: 10em;
+    flex: wrap;
+    margin-right: 10em;
+    margin:auto
     
 }
 
 #about-profile{
     margin-top: 20px !important;
+    margin-bottom: 20px;
+}
+
+.profile-reviews{
+    margin-left: 10rem;
+    margin-top:5rem;
+
+}
+
+@media (max-width: 480px) {
+    .profile{
+        margin-right: 0px;
+        margin-left:0px;
+    }
 }
 
 /* ============ RESERVATIONS CSS ~ Devan ============ */
