added more stuff

--- a/P1/style.css
+++ b/P1/style.css
@@ -289,6 +289,22 @@ main {
     height: 30px;
 }
 
+#photos {
+    max-width: 800px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.carousel-inner img{
+    width: 100%;
+    height: 225px;
+}
+
+.carousel {
+    max-width: 300px;
+}
+
 @media only screen and (max-width: 450px) {
     #property-info-wrapper .list-group li .request-card-info {
         height: 75px;
