--- a/P1/style.css
+++ b/P1/style.css
@@ -239,6 +239,8 @@ main {
     width: 30vw;
     display: flex;
     flex-direction: column;
+    max-width:100%;
+    align-items: flex-end;
 }
 
 .profile-body{
@@ -306,6 +308,7 @@ main {
     .profile-card{
         width: 100%;
         max-width:390px;
+        align-items: center;
     }
 
 }
