--- a/P1/style.css
+++ b/P1/style.css
@@ -44,6 +44,8 @@ html {
     width: 40vw;
 }
 
+.search-button {margin-left: auto;}
+
 .search-filter .form-control {
     width: 60% !important;
 }
@@ -411,8 +413,18 @@ main {
     border-radius: 0 0 10px 10px;
 }
 
+.small-search {
+    margin-right: auto;
+}
+
+@media only screen and (min-width: 1031px) {
+    .small-search {
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 1200px) {
-    .search-filter .form-control{
+    .large-search{
         /* font-size: 0.5rem !important; */
         display: None;
     }
@@ -653,6 +665,8 @@ main {
     visibility: hidden;
 }
 
+
+
 @media only screen and (max-width: 450px) {
     #property-info-wrapper .list-group li .request-card-info {
         height: 75px;
@@ -678,6 +692,7 @@ main {
         width: 100%;
         height: 100%;
     }
+
 
     #v-bar {
         visibility: hidden;
