--- a/P3/frontend/src/components/Signup/signup.css
+++ b/P3/frontend/src/components/Signup/signup.css
@@ -1,8 +1,8 @@
-.card {
+/* .card {
     position: absolute;
     top: 50%;
-    /* transform: translateY(-50%); */
-}
+
+} */
 
 /* .log-stuff{
     margin-left: auto;
@@ -10,7 +10,7 @@
     max-width:600px;
 } */
 
-.card-body{
+.logs{
     margin-top:auto;
     margin-bottom: auto;
     margin-left:auto ;
@@ -32,7 +32,7 @@
     position: relative;
 }
 
-main {
+.mainy {
     padding: 1.5em;
     display: flex;
     justify-content: center;
@@ -42,12 +42,12 @@ main {
 
 
 
-.card-body {
+/* .card-body {
     margin: 0;
     text-align: left;
-}
+} */
 
-.card-title{
+.card-t{
     text-align: center;
 }
 
@@ -65,11 +65,12 @@ p{
 
 
 @media (max-width: 750px) {
-    .card{
+    .logs{
         align-items: center !important;
         top: 50%;
         margin: 0 auto;
         display: flex;
+        flex-direction: column;
     }
     /* .card{
         display: flex;
