--- a/P3/frontend/src/components/Profile/style.css
+++ b/P3/frontend/src/components/Profile/style.css
@@ -1,3 +1,9 @@
 .bi-person-circle{
-    font-size: 150px !important;
+    font-size: 100px !important;
 }
+
+.abcd {
+    border-radius: 50%;
+    width: 200px;
+    height:200px;
+  }
