--- a/P3/frontend/src/components/Host/index.css
+++ b/P3/frontend/src/components/Host/index.css
@@ -176,6 +176,8 @@
 
     .property-mgr-wrapper {
         flex-direction: column;
+        margin-left: 5px;
+        margin-top: 5px;
     }
 
     #property-info-wrapper {
